// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`send should bounce on unknown message 1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.000000004",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Unknown string",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQATx58YvlfHtRNTqNXYeKUD0aoA8zP1ffmepeP5UaunSzFu",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 130,
        "errorMessage": "Invalid incoming message",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF00000000556E6B6E6F776E20737472696E67}",
            "type": "cell",
          },
          "bounce": false,
          "from": "kQATx58YvlfHtRNTqNXYeKUD0aoA8zP1ffmepeP5UaunSzFu",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.994561",
        },
      },
    ],
  },
]
`;

exports[`send should send reply correctly 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Deploy",
              "queryId": 0n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQATx58YvlfHtRNTqNXYeKUD0aoA8zP1ffmepeP5UaunSzFu",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 6,
        "errorMessage": "Invalid opcode",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": false,
          "from": "kQDIBBzWVCslg5xJXGUR8i6uE3nzNGTEBwrTcKCQ0arY9IJ3",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.992008",
        },
      },
    ],
  },
]
`;

exports[`send should send reply correctly 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.000000004",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Hello",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQATx58YvlfHtRNTqNXYeKUD0aoA8zP1ffmepeP5UaunSzFu",
          "type": "internal",
          "value": "10",
        },
      },
      {
        "$type": "failed",
        "errorCode": 6,
        "errorMessage": "Invalid opcode",
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "World",
              "type": "text",
            },
            "bounce": true,
            "from": "kQATx58YvlfHtRNTqNXYeKUD0aoA8zP1ffmepeP5UaunSzFu",
            "to": "@treasure(treasure)",
            "type": "internal",
            "value": "9.990889",
          },
          "bounce": false,
          "from": "kQDIBBzWVCslg5xJXGUR8i6uE3nzNGTEBwrTcKCQ0arY9IJ3",
          "to": "@treasure(treasure)",
          "type": "internal",
          "value": "9.992055",
        },
      },
    ],
  },
]
`;
